Update notebook.  tf default installed

--- a/ml_workshop.ipynb
+++ b/ml_workshop.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Basic Computing in NumPy\n",
     "NumPy is a numerical processing module for python, built on top of hardcore C and Fortran libraries.  This means it's actually pretty fast yet still gives you easy python programming.  Let's explore some of the nice things of NumPy and how it's different from standard Python.\n",
@@ -21,7 +24,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -60,7 +65,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Slice and Dice\n",
     "Python lists (and other \"iterables\") let you quickly select part of the object (i.e. the first 10 entries).  NumPy arrays crank this up to eleven, giving you full control of accessing arbitrary submatrices quickly and conveniently."
@@ -70,7 +78,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -129,7 +139,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Linear Algebra\n",
     "Wait!  Don't run away!  NumPy can do the linear algebra for you!  It uses some non-obvious terminology, but it can handle typical matrix operations."
@@ -139,7 +152,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -178,7 +193,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Matplotlib\n",
     "`matplotlib` is a nice plotting package that emulates MatLab's plotting capabilities in Python.  Human beings are good at pattern recognition, so we should take advantage of that.  It's useful for quick, simple things like scatterplots and heatmaps.  Let's take a look at these basics.  "
@@ -188,7 +206,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -204,7 +224,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -247,7 +269,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -291,7 +315,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -325,7 +351,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -357,7 +385,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# scikit-learn\n",
     "[scikit-learn](scikit-learn.org/stable) is a Python library that efficiently implements a ton of common statistical models.  Linear and logistic regression, k-means clustering, you name it.  Let's learn some basics."
@@ -367,7 +398,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -379,7 +412,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -424,6 +459,8 @@
    "execution_count": 12,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -479,54 +516,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Pandas\n",
-    "Pandas is a Python library for data analysis that tries to be like the statistical computing language, R.  It's big on \"dataframe\" objects and manipulating tables/arrays.  Even better, it comes with a plotting library that makes sweet pictures."
+    "Pandas is a Python library for data analysis that tries to be like the statistical computing language, R.  It's big on \"dataframe\" objects and manipulating tables/arrays.  Even better, it comes with a plotting library that makes sweet pictures.  We won't go over here but it's something to be aware of."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "deletable": true,
+    "editable": true
    },
-   "source": [
-    "# Installing TensorFlow in SageMathCloud\n",
-    "TensorFlow isn't always the most friendly library to install, but for a CPU-only version and Python3.4, it's not too bad.  Most of the pain comes from SageMathCloud cutting off our network access.\n",
-    "\n",
-    "First, download the TensorFlow wheel file.  Do this on your local computer, not SageMathCloud.\n",
-    "\n",
-    "```bash\n",
-    "# Use wget from the command line, or search the tensorflow website under \"Get Started\"\n",
-    "wget https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.7.1-cp34-none-linux_x86_64.whl\n",
-    "``` \n",
-    "\n",
-    "Next, in a SageMathCloud terminal, use `pip3` to install it like you might a normal Python package, but we'll pass in some options so that `pip3` doesn't try to download unneeded dependencies.\n",
-    "\n",
-    "```bash\n",
-    "pip3 install --user --no-index --no-deps tensorflow-0.6.0-cp34-none-linux_x86_64.whl\n",
-    "```\n",
-    "\n",
-    "That's it!  TensorFlow is now ready to use in a Python3 kernel under a Jupyter Notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Machine Learning and Neural Nets\n",
-    "TensorFlow is Google's new library for graph-based computing.  That just means that when you run most of the commands, they just tell TF how to do a computation, but don't actually do it yet.  This is actually nice for applications like neural networks, where you define the shape of net, and then train it.  TF includes a number of tools to help make neural nets; we're just going to scratch the surface with a simple network to classify some handwritten digits.\n",
+    "TensorFlow is Google's new library for graph-based computing.  That just means that when you run most of the commands, they just tell TF how to do a computation, but don't actually do it yet.  This is actually nice for applications like neural networks, where you define the shape of net, and then train it.  TF includes a number of tools to help make neural nets; we're just going to scratch the surface with a simple network to classify some handwritten digits.  And this all comes prepackaged in SageMathCloud.\n",
     "\n",
     "# TensorFlow `learn`\n",
     "Just like `sklearn` is a convenient interface to traditional machine learning algorithms, [`learn`](https://github.com/tensorflow/tensorflow/tree/master/tensorflow/contrib/learn/python/learn) is a simplified interface to building and training deep neural nets.  And now it comes free with every installation of TensorFlow!"
@@ -534,9 +541,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -557,7 +579,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -661,7 +685,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -737,7 +763,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -759,7 +787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3+"
+   "version": "3.5.2"
   },
   "name": "2016-01-14-193556.ipynb"
  },
